# misc

./: README.md
_etc/: polyrings.py
_etc/algor/: pycodestyle.cfg
_etc/algor-cpp/: CMakeLists.txt
_etc/comptime-evaluation-cost/: .gitignore
_etc/crsh/: install
_etc/crsh-v1/: crsh-client.go
_etc/crsh-v2/: .gitignore  go.sum
_etc/crsh-v3/: cr
_etc/dotfile-manager/: .gitignore  README.txt  go.mod
_etc/fek/: README.md
_etc/figures/: README.txt
_etc/gottherhythm/: pom.xml
_etc/guesser/: README.md
_etc/hak/: thoughts.txt
_etc/happiness/: flake.nix  pom.xml
_etc/haskell-chess/: package.yaml  stack.yaml
_etc/jq-wasm/: README.rst
_etc/kaggle/: sketchbook.ipynb  template.ipynb
_etc/linker-research/: .gitignore  RESULTS.md  check  flake.nix  hello.cpp  mylib.cpp  mylib.h
_etc/little_book_of_semaphores/: README.md
_etc/little_os_book/: Makefile  bochsrc.txt
_etc/mail_validator/: mail_validator.py
_etc/nav/: open-nav  setup.py
_etc/parallel_computing/: Makefile
_etc/project-euler-go/: channels.go  compare.go  cpu.prof  farey.go  fibonacci.go  go.mod  grid.go  slices.go  strings.go
_etc/project-euler-py/: setup.cfg
_etc/pyspell/: README.txt
_etc/rhythm-patterns/: .gitignore  README.md
_etc/rinp/: LICENSE
_etc/square_of_squares/: bigger_magic.sql  magic.go
_etc/tagz/: README.txt
_etc/tauto/: tauto.py  test.py
_etc/transpython/: README.txt  setup.py
_etc/twitterology/: LICENCE  requirements.txt
_etc/wordgame/: .gitignore  README.txt
_etc/zlisp/: .gitignore
_etc/zlisp/builder/: CMakeLists.txt  builder_main.c  linking.c
arduino/minigame/: README.txt  minigame.pde
arduino/myrgb/: README.txt  myrgb.pde
attention/: README.txt  pom.xml
befunge/: .gitignore  README.txt  flake.nix  pom.xml
befunge/scripts/: build  run
boring/filesearch/: README.txt  filesearch.cabal  package.yaml
boring/pascal/: .gitignore  Makefile  README
boring/twitterology/: .gitignore  README.md  requirements.txt
drafts/: Stochastic.hs  recursive_bayesian.py  routine_forest.py  simple_dataclass.py  turing-machine.clj
drafts/algor/: .gitignore  pyproject.toml  setup.cfg
drafts/algor-cpp/: CMakeLists.txt
drafts/algor/src/algor/: __init__.py
drafts/algor/test/: test_algor.py
drafts/comptime-evaluation-cost/: Makefile  evaluation.hpp  example.cpp  matrix.hpp
drafts/coroutines-in-c/: Makefile  README.txt  a.out  co.h  (+1 more)
drafts/fek/: .gitignore  CMakeLists.txt  README.md
drafts/fek/cmake/sdl2/: FindSDL2.cmake
drafts/fek/fek/: CMakeLists.txt
drafts/fek/fek/fek/: main.cpp
edem/: README.txt  pom.xml
excel/: roguelike-2017-10-09.xlsm  tic-tac-toe-2017-08-16.xlsx
figures/: pom.xml
funny/zlisp/: .clang-format  .envrc  .gitignore  .rgignore  CMakeLists.txt  HISTORY.md  Makefile  README.md  README.txt
funny/zlisp/builder/: CMakeLists.txt  builder_main.c  building.c  building.h  extensions.c  extensions.h  fmt.c  fmt.h  linking.c  linking.h  main.c  main.h  preprocessing.c  preprocessing.h
funny/zlisp/common/: CMakeLists.txt  building.c  compiling.c  extern.h  main.c  new_running.c  reading.c  running.c  running.h  types.h
funny/zlisp/common/zlisp/: common.h
funny/zlisp/core/: CMakeLists.txt  compiling.c  compiling.h  datum.c  datum.h  extending.c  extending.h  extern.h  linking.c  reading.c  reading.h  running.c  running.h  types.h
funny/zlisp/core/zlisp/: common.h
funny/zlisp/host-ffi/: CMakeLists.txt  builtins.c  builtins.h  builtins_.c  compiling.c  compiling.h  host.c  host.h  main.c  main.h  running.c  running.h  running_.c
funny/zlisp/host-ffi/zlisp/: host-ffi.h
funny/zlisp/host-python/: CMakeLists.txt  asm_to_python  main.c  main.h  zlisp-run-py
funny/zlisp/module/: CMakeLists.txt
funny/zlisp/module/c-prelude/: main.lisp
funny/zlisp/module/cli/: main.lisp
funny/zlisp/module/defun/: main.lisp
funny/zlisp/module/extensions/: main.lisp
funny/zlisp/module/libc/: main.lisp
funny/zlisp/module/py-prelude/: main.lisp
funny/zlisp/module/std/: main.lisp
funny/zlisp/module/std-pre-defun/: main.lisp
funny/zlisp/module/stdmacro/: main.lisp
funny/zlisp/module/testing/: main.lisp
funny/zlisp/module/zlisp/: CMakeLists.txt  main.lisp  wrapper.c
funny/zlisp/scripts/: build-and-test  format  lisp-format
funny/zlisp/src/main/: .clangd  prelude.lisp  zlisp-zlisp.c
funny/zlisp/test/: CMakeLists.txt  print-hosts.lisp  pytest.lisp  tests.lisp
funny/zlisp/test/imported/: main.lisp
funny/zlisp/tools/: CMakeLists.txt
funny/zlisp/zlisp-cli-bootstrap/: CMakeLists.txt  builtins.c  compiling.c  compiling.h  host.c  host.h  main.h
funny/zlisp/zlisp-cli-bootstrap/test/: print-hosts.lisp  tests.lisp
funny/zlisp/zlisp-cli-bootstrap/zlisp-cli-bootstrap/: builtins.c  builtins.h  compiling.c  compiling.h  host.c  host.h  main.c  main.h
funny/zlisp/zlisp-cli/zlisp-cli/: main.lisp
funny/zlisp/zlisp-impl/: CMakeLists.txt  compiling.c  extern.h  main.c  running.c  types.h  zlisp-impl.h
funny/zlisp/zlisp-impl-wrapper/: CMakeLists.txt
funny/zlisp/zlisp-impl-wrapper/zlisp-impl-wrapper/: main.c
funny/zlisp/zlisp-impl/test/: playground.lisp  tests.lisp
funny/zlisp/zlisp-impl/zlisp-impl/: compiling.c  compiling.h  main.c  main.h  prelude.lisp  python.c  python.h  running.c  running.h  types.h  zlisp-impl.h
game/: README.txt
gameclient/: README.txt  pom.xml
graphon/: README.txt  pom.xml
happiness/: README.txt
hardgame/: .gitignore  README.txt  flake.nix  requirements.txt  setup.py
haskell-chess/: .gitignore  flake.nix  haskell-chess.cabal  stack.yaml
mandelbrot/: Makefile  README.txt  flake.nix
notebooks/: cops_and_robbers_regex.ipynb  finite_field_multiplication.ipynb  hiring_problem.ipynb  homology.ipynb  pca.ipynb  quadratic_form_finite_field.ipynb  zebra.ipynb
organetto/: Makefile  README.md  flake.nix  sfgui.nix
raytrace/: README.txt  pom.xml
raytracing/: README.txt  flake.nix  pom.xml
renderer/: README.txt  flake.nix  pom.xml
robottest/: README.txt  pom.xml
snowflakes/: README.txt  flake.nix  pom.xml
space/: README.txt  flake.nix  pom.xml
weather/: README.txt  package.sh
(+528 files in other folders)
